# hybridlane

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  REUSE.toml  catalog-info.yaml  conftest.py  justfile  patch  pyproject.toml  pytest.toml  requirements.txt  ruff.toml  ty.toml
.binder/: postBuild  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  pull_request.yml  pytest.yml  release.yml
.zed/: debug.json
docs/releases/: changelog-0.1.0.md  changelog-0.2.0.md  changelog-0.3.0.md  changelog-0.4.0.md  changelog-0.4.1.md  changelog-0.5.0.md  changelog-0.5.1.md  changelog-0.6.0.md  changelog-0.6.1.md  changelog-0.7.0.md  changelog-0.8.0.md  changelog-v0.8.0.md
docs/source/: .gitignore  conf.py  exporting-circuits.rst  getting-started.rst  index.rst  introduction.rst  jaqal-export.rst  refs.bib  static-analysis.rst  type-checking.rst
examples/: cvstdgates.inc  jaqal_export_demo.py  jaqal_hybrid_demo.py
examples/asplos2026/: hybridlane_demo.ipynb
examples/ncsu2025/: hybridlane_demo.ipynb
src/hybridlane/: __init__.py  _version.py  util.py
test/: conftest.py  util.py
test/decomposition/: test_graph_decomposition.py
test/devices/: test_preprocess.py
test/draw/: test_draw_mpl.py
test/export/: test_hybridlane_ops_jaqal.py  test_jaqal.py
test/io/: test_openqasm.py
test/math/: test_init.py  test_matrix_manipulation.py  test_quantum.py  test_symplectic.py
test/measurements/: test_measurement.py  test_sample.py  test_state.py
test/ops/: test_cv.py  test_hybrid.py
(+123 files in other folders)
